maybe fixed width on mobile?

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -41,6 +41,7 @@ html {
 
 body {
 	width: 36em;
+	max-width: 100%;
 	margin: 0 auto;
 	padding: 0 10px;
 }
